--- a/amazon.html
+++ b/amazon.html
@@ -57,6 +57,7 @@
       </div>
     </div>
 
+    <script src="data/cart.js"></script>
     <script src="data/products.js"></script>
     <script src="backend/script.js"></script>
   </body>
