--- a/amazon.html
+++ b/amazon.html
@@ -57,8 +57,6 @@
       </div>
     </div>
 
-    <script src="data/cart.js"></script>
-    <script src="data/products.js"></script>
-    <script src="backend/script.js"></script>
+    <script type="module" src="scripts/script.js"></script>
   </body>
 </html>
